# protolabs-a2a

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
protolabs_a2a/: __init__.py  agent_card.py  auth.py  extensions.py  parts.py  skills.py
tests/: test_agent_card.py  test_extensions.py  test_skills.py
