[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protolabs-a2a"
version = "0.1.0"
description = "protoLabs A2A conventions layer (Python) — the 4 custom extensions + agent-card + auth, on top of a2a-sdk. Mirrors @protolabs/a2a (TS, in protoWorkstacean)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=1.1",
    # Pure JSON-Schema validation of structured-skill tool args (skills.py).
    # No LLM — validation only; the model call + repair stay in the runtime.
    "jsonschema>=4.18",
]

[project.urls]
Homepage = "https://github.com/protoLabsAI/protolabs-a2a"
Repository = "https://github.com/protoLabsAI/protolabs-a2a"

[tool.hatch.build.targets.wheel]
packages = ["protolabs_a2a"]
